2010-01-12 Magnus Hagdorn
 * libglide/Makefile.am: bundle isostasy code into a convinience library
 * libglide/isostasy.F90: convert doc strings to doxygen
 * libglide/isostasy_el.F90: ditto
 * libglide/isostasy_setup.F90: ditto
 * libglide/isostasy_types.F90: ditto

2010-01-11 Magnus Hagdorn
 * libglide/Makefile.am: remove file
 * libglide/glide_deriv.F90 moved to libglimmer/glimmer_deriv_time.F90
 * libglimmer/glimmer_deriv_time.F90: rename module and derived type
 * libglide/glide_types.F90: use new module and derived type names
 * libglide/glide_velo.F90: ditto
 * libglimmer/Makefile.am: add new file

2010-01-08 Magnus Hagdorn
 * libglide/Makefile.am: remove file
 * libglide/glide.F90: API changed
 * libglide/glide_stop.F90: ditto
 * libglimmer/ncdf_template.F90.in: ditto
 * libglint/glint_initialise.F90: ditto
 * libglide/glimmer_ncio.F90: moved to libglimmer
 * libglimmer/glimmer_ncio.F90: change arguments so that instead of 
   glide_global_type individual components are passed
 * libglimmer/Makefile.am: add new file

2010-01-06 Magnus Hagdorn
 * configure.in: detect whether fortran compiler supports allocatable
   components, set preprocessor macros GC_DYNARRAY_ATTRIB and GC_DYNARRAY_CHECK
 * libglide/glide_thckADI.F90: use new macros
 * libglimmer/glimmer_slap.F90: ditto
 * libglide/glide_tempFullSoln.F90: fix minor bug
 * libglimmer/glimmer_mask.F90: need to use glimmer_global earlier

2009-11-20 Magnus Hagdorn
 * m4macros/ax_f90_module_extension.m4: added new macro to detect f90 module
   extension
 * configure.in: determine f90 module file extension
 * example-drivers/EISMINT-3/src/Makefile.am: delete module files when 
   make clean is run
 * example-drivers/eis/src/Makefile.am: ditto
 * example-drivers/glint/src/Makefile.am: ditto
 * libglide/Makefile.am: ditto
 * libglimmer/Makefile.am: ditto
 * libglimmer-solve/Makefile.am: ditto
 * libglint/Makefile.am: ditto
 * tests/EISMINT/src/Makefile.am: ditto
 * tests/exact-isothermal/src/Makefile.am: ditto
