@@ -1,4 +1,9 @@
 2010-01-12 Magnus Hagdorn
+ * libglide/glide_setup.F90: also need to setup sigma coordinates when they are
+   specified in the configuration file
+ * libglide/isostasy_types.F90: fix bug
+
+2010-01-12 Magnus Hagdorn
  * libglide/Makefile.am: bundle isostasy code into a convinience library
  * libglide/isostasy.F90: convert doc strings to doxygen
  * libglide/isostasy_el.F90: ditto
